prometheus/prometheus-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: prometheus
  namespace: prometheus

spec:
  ingressClassName: traefik

  rules:
    - host: prometheus.local

      http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: prometheus-kube-prometheus-prometheus

                port:
                  number: 9090
